--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,83 @@
 body {
     background-size: cover;
+    font-family: 'Times New Roman', Times, serif;
+    margin: 5px;
+    }
+
+header {
+    background-color: orange;
+    width: 33%;
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+    margin-bottom: 5px;
+}
+
+h1 {
+    font-weight: bold;
+}
+
+#instructions {
+    background-color: beige;
+    font-weight: bold;
+    color: green;
+    padding-bottom: 50px;
+    padding-left: 5px;
+    width: 50%;
+    margin-bottom: 5px;
+}
+
+#goalsParent {
+    display: flex;
+    margin-bottom: 5px;
+}
+
+#goal {
+    background-color: lightgreen;
+    color: purple;
+    font-size: 35px;
+    width: 25%;
+    padding-left: 5px;
+    text-align: center;
+}
+
+#winLoss {
+    background-color: lightblue;
+    color: green;
+    width: 10%;
+    margin-left: 5px;
+    padding-left: 5px;
 }
 
 .gemButton {
     height: 150px;
     width: 150px;
 }
+
 .gemImage {
     height: 150px;
     width: 150px;
     image-orientation: center;
+}
 
+.gemButton {
+    image-orientation: center;
+}
+
+#score {
+    background-color: turquoise;
+    width: 33%;
+    color: white;
+    margin-top: 5px;
+    padding-left: 5px;
+    font-weight: bold;
+}
+
+#actualScore {
+    background-color: turquoise;
+    width: 33%;
+    height: 150px;
+    color: white;
+    padding-left: 5px;
 }
